objects/LLC_BI__Bill_Point__c.object
<CustomObject>
    <description>Standard pricing for a product.</description>
    <fields>
        <fullName>LLC_BI__AFP_Code_Description__c</fullName>
        <description>This is an optional field.  It is used to provide a description of the AFP Code of the bill point.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to provide a description of the AFP Code of the bill point.</inlineHelpText>
        <label>AFP Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__AFP_Code__c</fullName>
        <description>This is an optional field. It is used to identify the AFP code of the bill point.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field identifies the AFP code of the bill point.</inlineHelpText>
        <label>AFP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Allow_Volume_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the user can override the volume for one-time setup fees.</description>
        <label>Allow Volume Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__BSID_Code_Description__c</fullName>
        <description>This is an optional field. It is used to provide a description of the BSID Code of the bill point.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to provide a description of the BSID code of the bill point.</inlineHelpText>
        <label>BSID Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Block_Exception_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the user can enter and exception price or discount percent for a specific bill point.</description>
        <label>Block Exception Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Display_Price__c</fullName>
        <description>This field is populated automatically via formula. This field will display the price of the bill point if the Price Structure is set to &quot;Single.&quot; It will display &quot;Tiered&quot; if the Price Structure is set to &quot;Tiered&quot; or &quot;Progressive Tiered.&quot;</description>
        <formula>IF(ISPICKVAL(LLC_BI__Price_Structure__c, &apos;Single&apos;), TEXT(LLC_BI__Price__c), &apos;Tiered&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fixed_Unit_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This is an optional field. It is used to identify the fixed costs associated with a bill point</description>
        <inlineHelpText>This field is used to identify the fixed cost associated with a bill point.</inlineHelpText>
        <label>Fixed Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Monthly__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Perm_Waive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Perm Waive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Price_Structure__c</fullName>
        <defaultValue>&quot;Single&quot;</defaultValue>
        <description>This is a required field. This allows the user to specify if the price of the bill point is a single price, tiered or progress tiered price structure. The default value is &quot;Single.&quot;</description>
        <inlineHelpText>This field is used to specify if the price of the bill point is a single price, tiered, or progressive tiered price structure. The default value is Single.</inlineHelpText>
        <label>Price Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <default>true</default>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
                <value>
                    <fullName>Progressive Tiered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Bill point pricing for a product</description>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Type</label>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Bill Points</relationshipLabel>
        <relationshipName>Bill_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Bill Points</relationshipLabel>
        <relationshipName>Bill_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Progressive_Tiers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>-DEPRECATED- This is an optional, boolean field. When value is set to true, the bill point contains progressive tiered experience on the Quantity and Pricing page (by default, the value is false).</description>
        <label>-D Progressive Tiers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Class__c</fullName>
        <description>This is an optional field. It indicates the rate classes that are defined for the bill point. This is used to display the correct pricing on the Quantity and Pricing page based on the rate classes configured by the financial institution.</description>
        <inlineHelpText>This field indicates the rate classes that are defined for the bill point. This is used to display the correct pricing on the Quantity &amp; Pricing page based on the rate classes configured by the financial institution.</inlineHelpText>
        <label>Rate Class</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Semi_Variable_Unit_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This is an optional field. It is used to identify the semi variable costs associated with a bill point</description>
        <inlineHelpText>This field is used to identify the semi-variable cost associated with a bill point.</inlineHelpText>
        <label>Semi Variable Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiers__c</fullName>
        <description>This is an optional field. It is populated from the pricing tiers on a bill point. This is used to display the tiered pricing details on the Quantity and Pricing page for a given bill point.</description>
        <inlineHelpText>This is used to store the price information for a given bill point.</inlineHelpText>
        <label>Tiers</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unit_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This is an optional field. This field allows the user to specify the BSID of the bill point</description>
        <externalId>true</externalId>
        <label>BSID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookup_Key__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <inlineHelpText>If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bill Point</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>